@@ -43,7 +43,7 @@ apply plugin: 'ManifestClasspath'
 apply plugin: 'scalafmt'
 
 group = 'beam'
-version = '1.1-beta-v260121'
+version = '1.1-beta-v260209'
 
 description = """"""
 
@@ -151,8 +151,9 @@ configurations.all {
         // we need this in order to get Elki library working fine.
         force 'it.unimi.dsi:fastutil:8.5.12'
 
-        force 'org.apache.logging.log4j:log4j-core:2.15.0'
-        force 'org.apache.logging.log4j:log4j-api:2.15.0'
+        force 'org.apache.logging.log4j:log4j-core:2.19.0'
+        force 'org.apache.logging.log4j:log4j-api:2.19.0'
+        force 'org.apache.logging.log4j:log4j-1.2-api:2.19.0'
         force 'org.apache.parquet:parquet-avro:1.12.3'
         force 'org.apache.parquet:parquet-hadoop:1.12.3'
         force 'org.apache.parquet:parquet-common:1.12.3'
@@ -246,7 +247,7 @@ dependencies {
     implementation "com.typesafe.scala-logging:scala-logging_${scalaBinaryVersion}:3.9.0"
     implementation "org.slf4j:log4j-over-slf4j:${slf4jVersion}"
 
-    implementation(group: 'com.github.LBNL-UCB-STI', name: 'r5', version: 'v4.10.36') {
+    implementation(group: 'com.github.LBNL-UCB-STI', name: 'r5', version: 'v4.12.beta') {
         exclude group: 'ch.qos.logback', module: 'logback-classic'
         exclude group: 'org.slf4j', module: 'slf4j-simple'
         changing = true
@@ -476,14 +477,22 @@ tasks.withType(JavaExec).configureEach { task ->
     }
 }
 
-
-// Task to run scala tests, as Scala tests not picked up by Gradle by default.
-// You can run it with a number of threads: ./gradlew spec -PnumThreads=4
 task spec(dependsOn: ['testClasses'], type: JavaExec) {
     def n = project.hasProperty('numThreads') ? numThreads : 4
     mainClass = 'org.scalatest.tools.Runner'
-    args = ['-R', 'build/classes/scala/test', '-h', 'build/scalatest-report', '-u', 'build/scalatest-report-xml', '-oD', '-l', 'beam.tags.ExcludeRegular',
-            "-PS$n", '-T', '120', '-W', '300', '60']
+
+    // Install the custom security manager to catch System.exit() when running tests
+    jvmArgs "-Djava.security.manager=beam.NoExitForSpecSecurityManager"
+
+    args = ['-R', 'build/classes/scala/test',
+            '-h', 'build/scalatest-report',
+            '-u', 'build/scalatest-report-xml',
+            '-oD',
+            '-l', 'beam.tags.ExcludeRegular',
+            "-C", "beam.TestStatusReporter",   // custom reporter, to track running tests
+            "-PS$n",
+            '-T', '120',
+            '-W', '300', '60']
     classpath = sourceSets.test.runtimeClasspath
 }
 build.dependsOn spec
@@ -873,8 +882,6 @@ And that would only happen if the committed code is not formatted as expected.""
         }
     }
 }
-
-
 
 
 // Create a task to copy all dependencies
